fix laptop image overflow

--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -72,7 +72,7 @@
   grid-column: span 7 / -1;
   grid-row: 1/5;
   overflow: hidden;
-  margin-left: 64px;
+  padding-left: 64px;
   width: 100%;
   height: 85%;
   object-fit: cover;
@@ -81,7 +81,6 @@
     grid-column: 4/-4;
     grid-row: 5;
     height: auto;
-    width: 100%;
     margin-left: 18px;
     margin-top: calc(var(--spacing-unit) * 5);
     margin-bottom: calc(var(--spacing-unit) * 20);
@@ -91,8 +90,7 @@
     grid-column: 3/-1;
     grid-row: 5/7;
     height: 90%;
-    width: 100%;
-    margin-left: 0;
+    padding-left: 0;
     margin-top: calc(var(--spacing-unit) * 5);
     margin-bottom: calc(var(--spacing-unit) * 10);
   }
